# habitat-database

./: .gitignore  CONVERTER.md  README.md  RELEASE.md  build_converter_app.sh  package_converter_release.sh  pyproject.toml  requirements-converter.txt  run_converter.command  run_converter_dev.command  studio-animal-aided-design---habitat-database-export-1729694683585.json
assets/: aad-icon.icns
converter_app/: cli.py  dev_runner.py  gui.py  gui_main.py  models.py  output_graph.py  output_viewer.py  pipeline.py  reason_codes.py  reporting.py  tooljet_guide.py  utils.py
data/plants/: 20241106_Pflanzenliste_Pflanzentyp_Datenbank.xlsx
data/plants/import/: relations_importer.ipynb
data/species-portraits/images/: Grafiken_Zielarten_Lebenszyklen.xlsx
data/species-portraits/portraits/: 20230320_Grauschnäpper_BP_AM.xlsx  20230626_Schwalbenschwanz_Papilio_machaon_AM.xlsx  20230627_IdasBläuling_Plebejus_idas_AM.xlsx  (+3 more)
docs/converter/: AAD-Converter-Handbuch.md  README.md
scripts/: build_app_icon.sh  generate_converter_docs_pdf.py  prepare_test_fixtures.py  validate_parity.py
tests/: TESTING_PARITY.md  test_models.py  test_output_graph.py  test_reason_codes.py  test_utils.py
tests/fixtures/: README.md
tests/integration/: test_cli_parity.py
tooljet/: studio-animal-aided-design---habitat-database-export-1730908143712.json  studio-animal-aided-design---habitat-database-export-1731081007516.json  studio-animal-aided-design---habitat-database-export-1731507031425.json
tooljet/custom-components/: SpeciesAttributesExplorer.js  TabbedForm.js
(+20 files in other folders)
